<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_launcher_background"
    android:backgroundTint="@color/lightbeige"
    tools:context=".App4">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="415dp"
        android:layout_height="60dp"
        android:background="@drawable/ic_launcher_background"
        android:backgroundTint="@color/beige"
        android:gravity="center_vertical"
        android:text="@string/Titulo4"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="VisualLintBounds" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="39dp"
        android:contentDescription="@string/OncaPintada"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:srcCompat="@drawable/animal1"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="39dp"
        android:contentDescription="@string/LoboGuara"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:srcCompat="@drawable/animal2" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="39dp"
        android:contentDescription="@string/Panda"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:srcCompat="@drawable/animal3" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="36dp"
        android:contentDescription="@string/Pinguimafricano"
        app:layout_constraintEnd_toStartOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:srcCompat="@drawable/animal4" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="37dp"
        android:autoSizeTextType="uniform"
        android:gravity="center_vertical"
        android:text="@string/OncaPintada"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="150dp"
        android:layout_height="120dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="37dp"
        android:autoSizeTextType="uniform"
        android:gravity="center_vertical"
        android:text="@string/LoboGuara"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="37dp"
        android:autoSizeTextType="uniform"
        android:gravity="center_vertical"
        android:text="@string/Panda"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="37dp"
        android:autoSizeTextType="uniform"
        android:gravity="center_vertical"
        android:text="@string/Pinguimafricano"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="51dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="141dp"
        android:backgroundTint="@color/black"
        android:text="@string/botão1"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:rippleColor="@color/white" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="42dp"
        android:backgroundTint="@color/black"
        android:text="@string/botão2"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:rippleColor="@color/white" />

    <LinearLayout
        android:layout_width="415dp"
        android:layout_height="50dp"
        android:layout_marginStart="1dp"
        android:layout_marginBottom="-30dp"
        android:background="@drawable/ic_launcher_background"
        android:backgroundTint="@color/beige"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="VisualLintBounds"></LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>